--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>rashi-portfolio</title>
+    <link
+  rel="preload"
+  as="image"
+  href="/images/14.webp"
+  
+/>
+<link
+  rel="preload"
+  as="font"
+  href="/assets/Bebasb.tff"
+  type="font/woff2"
+  crossorigin
+/>
+
   </head>
   <body>
     <div id="root"></div>
