--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link
   rel="preload"
   as="font"
-  href="/assets/Bebasb.tff"
+  href="/assets/Gistesy.woff2"
   type="font/woff2"
   crossorigin
 />
